@@ -1,5 +1,6 @@
 v1.6.3.1
-    - Updating jQuery version to 1.12.4 that still supports any web browser
+   - Updating jQuery version to 1.12.4 that still supports any web browser
+   - #491: Fixing issue when we use set_read_fields with a column that doesn't exist at the database
 v1.6.3
    - #465: Translation for Spanish Uruguay by @mlopezcoria
    - #470: Update Polish translation by @tikky
